--- a/src/components/matrix/matrix.css
+++ b/src/components/matrix/matrix.css
@@ -15,7 +15,17 @@
     margin-bottom: 5px;
 }
 
-
+.cell {
+    width: 7.3%;
+    height: 5.57vh;
+    border-radius: 2px;
+    margin-top: 5px;
+    margin-right: 0;
+    margin-bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .cell-valid {
     background-color: transparent;
@@ -25,10 +35,13 @@
 .header {
     width: 100%;
     height: 10vh;
-    background-color: aqua;
+    background-color: rgb(65, 250, 156);
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: sans-serif;
+    font-size: 16pt;
+    color: #b91616;
 }
 
 .footer {
