--- a/src/components/cell/cell.css
+++ b/src/components/cell/cell.css
@@ -1,6 +1,6 @@
 
 .cell {
-    width: 7.3%;
+    width: 100%;
     height: 5.57vh;
     border-radius: 2px;
     margin-top: 5px;
@@ -9,6 +9,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.cell-valid {
+    background-color: transparent;
+    color: #09202F;
 }
 
 .number {
