--- a/src/components/cell/cell.css
+++ b/src/components/cell/cell.css
@@ -1,11 +1,8 @@
 
-.cell {
+.cell-component {
     width: 100%;
-    height: 5.57vh;
-    border-radius: 2px;
-    margin-top: 5px;
-    margin-right: 0;
-    margin-bottom: 0;
+    height: 100%;
+    border-radius: 3px;
     display: flex;
     justify-content: center;
     align-items: center;
