--- a/src/components/matrix/matrix.css
+++ b/src/components/matrix/matrix.css
@@ -5,26 +5,41 @@
     background-color: #09202F;
 }
 
-.row {
+.matrix {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 }
 
-.row:last-child {
+.matrix:last-child {
     margin-bottom: 5px;
 }
 
 .cell {
     width: 7.3%;
-    height: 5.57vh;
-    border-radius: 2px;
+    height: 5.53vh;
     margin-top: 5px;
-    margin-right: 0;
-    margin-bottom: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+}
+
+@media (max-width: 1326px) and (max-height: 768px) { 
+    .cell {
+        height: 5.45vh;
+    }
+}
+
+@media (max-width: 720px) and (max-height: 480px) { 
+    .cell {
+        height: 5.05vh;
+    }
+}
+
+@media (max-width: 410px) and (max-height: 410px) { 
+    .cell {
+        height: 4.85vh;
+    }
+    .all {
+        padding: 15px !important;
+    }
 }
 
 .cell-valid {
@@ -35,22 +50,51 @@
 .header {
     width: 100%;
     height: 10vh;
-    background-color: rgb(65, 250, 156);
+    background-color: rgb(0,229,189);
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: sans-serif;
-    font-size: 16pt;
-    color: #b91616;
+    font-weight: bold;
+    font-size: 25px;
+    color: #000;
 }
 
 .footer {
     width: 100%;
     height: 10vh;
-    background-color: aqua;
+    background-color: rgb(0,229,189);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.all {
+    padding: 20px;
+    height: 9vh;
+    background-color: rgb(21, 24, 32);
+    border-radius: 5px;
+    margin-left: 10px;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.positive {
+    padding: 10px;
+    height: 9vh;
+    background-color: rgb(21, 188, 156);
+    border-radius: 5px;
+    color: #fff;
+}
+
+.negative {
+    padding: 10px;
+    height: 9vh;
+    background-color: rgb(191, 11, 27);
+    border-radius: 5px;
+    margin-left: 10px;
+    color: #fff;
+}
 
